# tts-loadtest

./: .ansible-lint  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-grpc.txt  requirements-triton.txt  requirements.txt
ansible/: gpu_base.yml  gpu_exporters.yml  site.yml
config/: pricing.yaml  scenarios.yaml  stand.yaml
docs/: session-journal-2026-07.md  ttfb_tuning_plan.md
loadgen/: client.py  metrics.py  runner.py  session.py
loadgen/proto/: __init__.py  cosyvoice_pb2.py  cosyvoice_pb2_grpc.py
loadgen/texts/: long.txt  short.txt
mock_server/: config.yaml  grpc_server.py  server.py
report/: aggregate.py  build_report.py  collect.py  cost_model.py
results/: report_a100_2026-07-03.md
results/diag/: diag_nmax_short_cached.nmax.json  diag_nmax_short_cached_n1.jsonl  diag_nmax_short_cached_n1.meta.json  diag_plateau2_mixed_cached.jsonl  diag_plateau2_mixed_cached.meta.json  diag_plateau4_short_clone.jsonl  diag_plateau4_short_clone.meta.json  report.md  summary.csv
results/tune_2026-07-04/: report.md
results/v3_full/: nmax_mixed_cached.nmax.json  nmax_mixed_cached_n10.jsonl  nmax_mixed_cached_n10.meta.json  plateau100_mixed_cached.jsonl  plateau100_mixed_cached.meta.json  plateau100_mixed_clone.jsonl  plateau100_mixed_clone.meta.json  plateau10_mixed_cached.jsonl  plateau10_mixed_cached.meta.json  report.md  (+9 more)
scripts/: gen_group_vars.py  gen_inventory.py  gen_ref_audio.py  smoke_local.sh
tests/: conftest.py  test_cost_model.py  test_e2e_grpc.py  test_e2e_mock.py  test_metrics.py  test_triton_transport.py
(+83 files in other folders)
