[project]
name = "tts-loadtest"
version = "0.1.0"
description = "Стенд нагрузочного тестирования стримингового TTS + расчёт стоимости секунды синтеза"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["loadgen/proto"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["e2e: тесты против локального mock TTS-сервера"]
